2014-07-31  6.8.9-8 Dirk Lemstra <dirk@snakeware...>
  * Added support for some legacy dds formats (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=26184).

2014-08-16  6.8.9-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.9-7, SVN revision 16330.

2014-08-14  6.8.9-7 Cristy  <quetzlzacatenango@image...>
  * Fix off by one buglet when extracting profiles 8BIM (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26095).

2014-07-31  6.8.9-7 Dirk Lemstra <dirk@snakeware...>
  * Fixed bug when reading 1 bit PSD. (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26015).

2014-07-25  6.8.9-7 Glenn Randers-Pehrson <glennrp@image...>
  * Relocate initialization of "image_colors" in the PNG encoder, to avoid
    a possible use of uninitialized variable.

2014-07-25  6.8.9-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.9-6, SVN revision 16211.

2014-07-24  6.8.9-6 Glenn Randers-Pehrson <glennrp@image...>
  * Use IsOptionMember() instead of LocaleNCompare() in coders/png.c to
    parse the list of excluded and included PNG chunks.

2014-07-19  6.8.9-6 Dirk Lemstra <dirk@snakeware...>
  * Fixed fill-rule in SVG clip path (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=25882).

2014-07-14  6.8.9-6 Glenn Randers-Pehrson <glennrp@image...>
  * Removed some dead code (testing image->matte) in PNG64 encoder.

2014-07-07  6.8.9-6 Dirk Lemstra <dirk@snakeware...>
  * Added support for R5G6B5, RGB5A1 and RGBA4 dds files.

2014-07-01  6.8.9-6 Cristy  <quetzlzacatenango@image...>
  * Write LAB pixels as percentages in the TXT image format (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25830).
  * Throw exception when image morphology differs when comparing (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25927).
  * Remove mogrify backup file (reference